# VapeShield

./: .gitignore  .secrets.example  Dockerfile  README.md  action.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: self-test.yaml  self-test.yml
docs/: CODING_STYLES_LINTING.md  CONTRIBUTING.md
src/: PLACEHOLDER.md  apikeys.example.json  vape.py
