[tool.poetry]
name = "VapeShield"
version = "0.1.0"
description = ""
authors = ["seano-vs <sean.mccully@voteshield.us>"]

[tool.poetry.dependencies]
python = "^3.9"
schemathesis = "^3.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
